# embedding_server_torch

./: .gitignore  readme.md
vit_embedding_server/: CMakeLists.txt  main.cpp
